--- a/manifest.json
+++ b/manifest.json
@@ -1,11 +1,10 @@
 {
-	"id": "sample-plugin",
-	"name": "Sample Plugin",
-	"version": "1.0.0",
+	"id": "dnd-encounter",
+	"name": "DnD Encounter",
+	"version": "0.0.1",
 	"minAppVersion": "0.15.0",
-	"description": "This is a sample plugin for Obsidian. This plugin demonstrates some of the capabilities of the Obsidian API.",
-	"author": "Obsidian",
-	"authorUrl": "https://obsidian.md",
-	"fundingUrl": "https://obsidian.md/pricing",
+	"description": "This plugin helps you run DnD encounters inside Obsidian.",
+	"author": "Johannes Palvanen",
+	"authorUrl": "https://github.com/jeknom/dnd-encounter",
 	"isDesktopOnly": false
 }
