--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
 		"obsidian": "latest",
 		"tslib": "2.4.0",
 		"typescript": "4.7.4",
-		"yaml": "^2.3.4"
+		"yaml": "2.3.4",
+		"zod": "3.22.4"
 	}
 }
