--- a/package.json
+++ b/package.json
@@ -11,16 +11,22 @@
 	"keywords": [],
 	"author": "",
 	"license": "MIT",
+	"dependencies": {
+		"yaml": "2.3.4",
+		"zod": "3.22.4"
+	},
 	"devDependencies": {
-		"@types/node": "^16.11.6",
+		"@tsconfig/svelte": "5.0.2",
+		"@types/node": "16.11.6",
 		"@typescript-eslint/eslint-plugin": "5.29.0",
 		"@typescript-eslint/parser": "5.29.0",
 		"builtin-modules": "3.3.0",
 		"esbuild": "0.17.3",
+		"esbuild-svelte": "^0.8.0",
 		"obsidian": "latest",
+		"svelte": "4.2.5",
+		"svelte-preprocess": "5.1.0",
 		"tslib": "2.4.0",
-		"typescript": "4.7.4",
-		"yaml": "2.3.4",
-		"zod": "3.22.4"
+		"typescript": "4.7.4"
 	}
 }
