--- a/package.json
+++ b/package.json
@@ -12,12 +12,14 @@
 	"author": "",
 	"license": "MIT",
 	"dependencies": {
+		"uuid": "9.0.1",
 		"yaml": "2.3.4",
 		"zod": "3.22.4"
 	},
 	"devDependencies": {
 		"@tsconfig/svelte": "5.0.2",
 		"@types/node": "16.11.6",
+		"@types/uuid": "9.0.7",
 		"@typescript-eslint/eslint-plugin": "5.29.0",
 		"@typescript-eslint/parser": "5.29.0",
 		"builtin-modules": "3.3.0",
