--- a/manifest.json
+++ b/manifest.json
@@ -1,10 +1,10 @@
 {
-	"id": "dnd-encounter",
-	"name": "DnD Encounter",
+	"id": "dnd-toolbox",
+	"name": "DnD Toolbox",
 	"version": "0.0.1",
 	"minAppVersion": "0.15.0",
-	"description": "This plugin helps you run DnD encounters inside Obsidian.",
+	"description": "This plugin helps you manage DnD campaigns inside Obsidian.",
 	"author": "Johannes Palvanen",
-	"authorUrl": "https://github.com/jeknom/dnd-encounter",
-	"isDesktopOnly": false
+	"authorUrl": "https://github.com/jeknom/dnd-toolbox",
+	"isDesktopOnly": true
 }
