--- a/package.json
+++ b/package.json
@@ -5,8 +5,10 @@
 	"main": "main.js",
 	"scripts": {
 		"dev": "concurrently \"npx tailwindcss -i ./main.css -o ./styles.css --watch\" \"node esbuild.config.mjs\"",
+		"version": "node version-bump.mjs && git add manifest.json versions.json",
 		"build": "tsc -noEmit -skipLibCheck && node esbuild.config.mjs production",
-		"version": "node version-bump.mjs && git add manifest.json versions.json"
+		"publish": "source copy-build-to-notes.sh",
+		"deploy": "npm run build && npm run publish"
 	},
 	"keywords": [],
 	"author": "",
