--- a/package.json
+++ b/package.json
@@ -1,38 +1,41 @@
 {
-	"name": "obsidian-sample-plugin",
-	"version": "1.0.0",
-	"description": "This is a sample plugin for Obsidian (https://obsidian.md)",
+	"name": "rp-toolbox",
+	"version": "0.0.1",
+	"description": "Makes it easy to run role playing campaigns in Obsidian",
+	"type": "module",
 	"main": "main.js",
 	"scripts": {
-		"dev": "concurrently \"npx tailwindcss -i ./main.css -o ./styles.css --watch\" \"node esbuild.config.mjs\"",
+		"dev": "concurrently \"npx tailwindcss -i ./main.css -o ./styles.css --watch\" \"rollup -c --watch\"",
 		"version": "node version-bump.mjs && git add manifest.json versions.json",
-		"build": "tsc -noEmit -skipLibCheck && node esbuild.config.mjs production",
 		"publish": "source copy-build-to-notes.sh",
 		"deploy": "npm run build && npm run publish"
 	},
-	"keywords": [],
-	"author": "",
-	"license": "MIT",
+	"keywords": [
+		"roleplay",
+		"dnd",
+		"dungeon master"
+	],
+	"author": "Johannes Palvanen",
 	"dependencies": {
 		"uuid": "9.0.1",
-		"yaml": "2.3.4",
 		"zod": "3.22.4"
 	},
 	"devDependencies": {
+		"@rollup/plugin-node-resolve": "^15.2.3",
+		"@rollup/plugin-typescript": "11.1.6",
 		"@tsconfig/svelte": "5.0.2",
 		"@types/node": "16.11.6",
 		"@types/uuid": "9.0.7",
 		"@typescript-eslint/eslint-plugin": "5.29.0",
 		"@typescript-eslint/parser": "5.29.0",
-		"builtin-modules": "3.3.0",
 		"concurrently": "8.2.2",
-		"esbuild": "0.17.3",
-		"esbuild-svelte": "^0.8.0",
 		"obsidian": "latest",
+		"rollup": "4.13.2",
+		"rollup-plugin-css-only": "^4.5.2",
+		"rollup-plugin-svelte": "^7.2.0",
 		"svelte": "4.2.5",
-		"svelte-preprocess": "5.1.0",
+		"svelte-preprocess": "^5.1.3",
 		"tailwindcss": "^3.3.5",
-		"tslib": "2.4.0",
 		"typescript": "4.7.4"
 	}
 }
