--- a/.eslintrc
+++ b/.eslintrc
@@ -8,7 +8,8 @@
     "extends": [
       "eslint:recommended",
       "plugin:@typescript-eslint/eslint-recommended",
-      "plugin:@typescript-eslint/recommended"
+      "plugin:@typescript-eslint/recommended",
+      "plugin:eslint-plugin-svelte"
     ], 
     "parserOptions": {
         "sourceType": "module"
