--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
 		"@typescript-eslint/eslint-plugin": "5.29.0",
 		"@typescript-eslint/parser": "5.29.0",
 		"concurrently": "8.2.2",
+		"eslint": "8.57.0",
+		"eslint-plugin-svelte": "2.35.1",
 		"obsidian": "latest",
 		"rollup": "4.13.2",
 		"rollup-plugin-css-only": "^4.5.2",
