--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
 		"dev": "concurrently \"npx tailwindcss -i ./main.css -o ./styles.css --watch\" \"rollup -c --watch\"",
 		"version": "node version-bump.mjs && git add manifest.json versions.json",
 		"publish": "source copy-build-to-notes.sh",
-		"deploy": "npm run build && npm run publish"
+		"deploy": "npm run build && npm run publish",
+		"build": "rollup -c"
 	},
 	"keywords": [
 		"roleplay",
