--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
 	"author": "Johannes Palvanen",
 	"dependencies": {
 		"lucide-svelte": "^0.363.0",
+		"openai": "4.31.0",
 		"uuid": "9.0.1",
 		"zod": "3.22.4"
 	},
