--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
 	"scripts": {
 		"dev": "concurrently \"npx tailwindcss -i ./main.css -o ./styles.css --watch\" \"rollup -c --watch\"",
 		"version": "node version-bump.mjs && git add manifest.json versions.json",
-		"publish": "source copy-build-to-notes.sh",
-		"deploy": "npm run build && npm run publish",
+		"copy-to-prod-notes": "source copy-build-to-notes.sh",
+		"deploy": "yarn build && yarn copy-to-prod-notes",
 		"build": "rollup -c"
 	},
 	"keywords": [
