Fix issue where workflow would pack incorrect css into releases

--- a/.github/workflows/build-and-release.yml
+++ b/.github/workflows/build-and-release.yml
@@ -27,7 +27,7 @@ jobs:
 
       - name: Zip files
         run: |
-          zip toolbox.zip main.js main.css manifest.json
+          zip toolbox.zip main.js styles.css manifest.json
 
       - name: Create release
         id: create_release
